kubernetes/canary/native/my-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app
  labels:
    app: my-app
spec:
  type: NodePort
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    app: my-app

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app-production
  labels:
    app: my-app
spec:
  selector:
    matchLabels:
      app:  my-app
  replicas: 5
  strategy:
    type: RollingUpdate
    rollingUpdate: 
      maxUnavailable: 1
      maxSurge: 1 
  template:
    metadata:
      labels:
        app: my-app
        version: 1.0.0
    spec:
      containers:
        - image: myapp:1.0
          imagePullPolicy: Never
          name: my-app
          ports:
            - containerPort: 8080

---

#API RELEASE

# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: my-app-canary
#   labels:
#     app: my-app
# spec:
#   selector:
#     matchLabels:
#       app:  my-app
#   replicas: 2
#   strategy:
#     type: RollingUpdate
#     rollingUpdate: 
#       maxUnavailable: 1
#       maxSurge: 1 
#   template:
#     metadata:
#       labels:
#         app: my-app
#         version: 2.0.0
#     spec:
#       containers:
#         - image: myapp:2.0
#           imagePullPolicy: Never
#           name: my-app
#           ports:
#             - containerPort: 8080
